- add /lib/udev/usb_id which is needed by mouse.pm to generate /dev/input/by-id/xxx

Version 10.4.142 - 2 July 2007, by Pascal "Pixel" Rigaux

- brown paper bag fix (stage1 can't create symlink /etc/rpm/platform)

Version 10.4.141 - 29 June 2007, by Pascal "Pixel" Rigaux

- bundle /etc/rpm/platform for rpm 4.4.8
- use modularized ide drivers and configure ide-controller in modprobe.conf
- auto_install:
  o allow "automatic=met:http,ser:server,dir:/pub/dir
    kickstart=/pub/auto_inst.cfg" to get http://server/pub/auto_inst.cfg (#31474)
  o ensure /etc/resolv.conf is configured in /mnt for network installs
- add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
- diskdrake
  o fix 1.9TB displayed as 1TB
- do not ask for updates at end of installation when updates are already
  available (network installs) (#30344)
- do not try to configure dvd devices since /dev is wiped out at
  reboot
- fix detecting usb drives (#13395)
  (need a perl-MDK-Common 1.2.5)
- hw support:
  o handle snd-cs5530 driver
- install fonts-ttf-dejavu & fonts-ttf-liberation by default
- allow umounting cdrom during a transaction
- really allow having name with "/" in media.cfg
- use "mkfs.ext3" instead of "mkfs.ext2 -J"
  (to have dir_index & resize_inode features)
  (cf Frederik Himpe 23 Apr 2007 mail on cooker)

Version 10.4.129 - 4 April 2007, by Pascal "Pixel" Rigaux

- move advertising out of drakx-installer-stage2 into drakx-installer-advertising

Version 10.4.128 - 3 April 2007, by Pascal "Pixel" Rigaux

- don't configure /etc/kde/kdm/kdmrc if it doesn't exist
  (other kdmrc.rpmnew will be created, many important values will be missing)
- fix ext3 formatting with label and progress bar (#30032)
- fix taking screenshot
- prefering libkdebase4-kmenuedit over libkdebase46-kmenuedit to ensure
  kdebase-kmenuedit is chosen instead of kdebase4-kmenuedit

Version 10.4.126 - 29 March 2007, by Olivier "blino" Blin

- use pci_domain when matching sysfs device and computing