@@ -1,3 +1,4 @@
+- allow using sqlite for rpmdb when using option rpm_dbapi=4
 - add /lib/udev/usb_id which is needed by mouse.pm to generate /dev/input/by-id/xxx
 
 Version 10.4.142 - 2 July 2007, by Pascal "Pixel" Rigaux
